feat: Auditoria de Segurança Completa v1.2.0
 Credenciais externalizadas para .env
 Headers de segurança implementados
 Logs mascarados para dados sensíveis
 CORS configurável por ambiente
 Autorização granular nos endpoints
 .gitignore aprimorado e organizado
 README atualizado com informações de segurança
 Relatório de segurança detalhado (SECURITY_REPORT.md)

Arquivos principais modificados:
- SecurityConfig.java: Headers de segurança e CORS
- AuditoriaService.java: Mascaramento de logs
- application.properties: Configurações externalizadas
- docker-compose.yml: Variáveis de ambiente
- .gitignore: Proteção contra commit de dados sensíveis
- README.md: Documentação de segurança atualizada