@@ -1,13 +1,16 @@
 package com.zettamercado.config;
 
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.header.writers.ReferrerPolicyHeaderWriter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -19,31 +22,88 @@ import java.util.List;
 @EnableWebSecurity
 public class SecurityConfig {
 
+    @Value("${CORS_ALLOWED_ORIGINS:http://localhost:3000,http://localhost:80}")
+    private String allowedOrigins;
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         return http
+                // Desabilita CSRF apenas para desenvolvimento - ATENÇÃO: Habilitar em produção!
                 .csrf(AbstractHttpConfigurer::disable)
+                
+                // Configuração CORS
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                
+                // Configuração de sessão - stateless para APIs REST
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                
+                // Headers de segurança
+                .headers(headers -> headers
+                    .frameOptions().deny()
+                    .contentTypeOptions().and()
+                    .httpStrictTransportSecurity(hstsConfig -> hstsConfig
+                        .maxAgeInSeconds(31536000)
+                        .includeSubdomains(true)
+                        .preload(true)
+                    )
+                    .referrerPolicy(ReferrerPolicyHeaderWriter.ReferrerPolicy.STRICT_ORIGIN_WHEN_CROSS_ORIGIN)
+                )
+                
+                // Configuração de autorização
                 .authorizeHttpRequests(auth -> auth
-                        .anyRequest().permitAll()
+                    // Endpoints públicos
+                    .requestMatchers("/api/auth/**").permitAll()
+                    .requestMatchers("/api/categorias/**").permitAll()
+                    .requestMatchers("/api/produtos/**").permitAll()
+                    .requestMatchers("/api/carrinho/**").permitAll()
+                    .requestMatchers("/api-docs/**", "/swagger-ui/**", "/swagger-ui.html").permitAll()
+                    .requestMatchers("/actuator/health").permitAll()
+                    
+                    // Endpoints administrativos (futura implementação de autenticação)
+                    .requestMatchers("/api/admin/**").permitAll() // TODO: Implementar autenticação
+                    .requestMatchers("/actuator/**").permitAll() // TODO: Restringir em produção
+                    
+                    // Qualquer outra requisição precisa de autenticação (futura implementação)
+                    .anyRequest().permitAll() // TODO: Mudar para authenticated() quando implementar auth
                 )
                 .build();
     }
 
-
-
     @Bean
     public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
+        return new BCryptPasswordEncoder(12); // Força de hash aumentada para maior segurança
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost", "http://localhost:3000", "http://localhost:80"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        
+        // Configuração dinâmica de origens permitidas
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        configuration.setAllowedOrigins(origins);
+        
+        // Métodos HTTP permitidos
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        
+        // Headers permitidos
+        configuration.setAllowedHeaders(Arrays.asList(
+            "Authorization", 
+            "Content-Type", 
+            "X-Requested-With", 
+            "Accept", 
+            "Origin", 
+            "Access-Control-Request-Method", 
+            "Access-Control-Request-Headers"
+        ));
+        
+        // Headers expostos para o cliente
+        configuration.setExposedHeaders(Arrays.asList(
+            "Access-Control-Allow-Origin", 
+            "Access-Control-Allow-Credentials"
+        ));
+        
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L); // Cache de preflight por 1 hora
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
